--- a/{{cookiecutter.project_slug}}/Pipfile
+++ b/{{cookiecutter.project_slug}}/Pipfile
@@ -15,6 +15,8 @@ tox = "*"
 pylint = "*"
 {% if cookiecutter.use_pytest == 'y' -%}
 pytest = "*"{% endif %}
+{% if cookiecutter.use_mypy_type_checking == 'y' -%}
+mypy = "*"{% endif %}
 isort = "*"
 yapf = "*"
 
