Fix linting of tests directory

--- a/{{cookiecutter.project_slug}}/mypy.ini
+++ b/{{cookiecutter.project_slug}}/mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 strict = True
 warn_unused_configs = True
-files = {{cookiecutter.project_slug}}, test
+files = {{cookiecutter.project_slug}}, tests
