--- a/{{cookiecutter.project_slug}}/mypy.ini
+++ b/{{cookiecutter.project_slug}}/mypy.ini
@@ -2,3 +2,6 @@
 strict = True
 warn_unused_configs = True
 files = {{cookiecutter.project_slug}}, tests
+
+[mypy-pytest]
+ignore_missing_imports = True
