--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
       - master
+      - master-yukihiko-shinoda
   pull_request:
     branches:
       - master
+      - master-yukihiko-shinoda
 jobs:
   test:
     runs-on: ${{ matrix.os }}
