--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
 
+branches:
+  only:
+    - master
+    - master-yukihiko-shinoda
+
 # command to run tests, e.g. python setup.py test
 script: tox
 
