--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ sphinx-rtd-theme = "*"
 bumpversion = "*"
 pipenv-setup = "*"
 isort = "*"
+# Hotfix for Pipenv's Bug @see https://github.com/pypa/pipenv/issues/4101
+colorama = "*"
 
 [packages]
 
