--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,8 @@ description-file = README.rst
 search = version='{current_version}'
 replace = version='{new_version}'
 
+[flake8]
+exclude = docs
+# @see https://github.com/psf/black/blob/master/README.md#line-length
+max-line-length = 88
+extend-ignore = E203
