Replace formater from yapf to black
Replace formater from yapf to black since pipenv-setup uses black.

--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -13,6 +13,9 @@ replace = __version__ = '{new_version}'
 
 [flake8]
 exclude = docs
+# @see https://github.com/psf/black/blob/master/README.md#line-length
+max-line-length = 88
+extend-ignore = E203
 
 [aliases]
 # Define setup.py command aliases here
