--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - run: python -m pip install pipenv
-      - run: python -m pipenv update --dev
+      - run: python -m pipenv install --skip-lock --dev
       - run: python -m pipenv run invoke test
   check_style:
     runs-on: ubuntu-latest
