--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -14,7 +14,7 @@ replace = __version__ = '{new_version}'
 [flake8]
 exclude = docs
 # @see https://github.com/psf/black/blob/master/README.md#line-length
-max-line-length = 88
+max-line-length = {{ cookiecutter.python_code_max_length_per_line }}
 extend-ignore = E203
 
 [aliases]
