--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -11,3 +11,8 @@ line_length = {{ cookiecutter.python_code_max_length_per_line }}
 [tool.black]
 line-length = {{ cookiecutter.python_code_max_length_per_line }}
 {%- endif %}
+{%- if cookiecutter.python_code_max_length_per_line != '100' %}
+
+[tool.pylint.format]
+max-line-length = "{{ cookiecutter.python_code_max_length_per_line }}"
+{%- endif %}
