--- a/{{cookiecutter.project_slug}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           python-version: {{ "${{ matrix.python-version }}" }}
       - run: python -m pip install pipenv
-      - run: python -m pipenv update --dev
+      - run: python -m pipenv install {{ "${{ matrix.python-version }}" }} --skip-lock --dev
       - run: python -m pipenv run invoke test
   check_setup:
     runs-on: ubuntu-latest
