Fix bug that test for format check can't work

--- a/{{cookiecutter.project_slug}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/test.yml
@@ -31,4 +31,4 @@ jobs:
           python-version: '3.8'
       - run: python -m pip install pipenv
       - run: python -m pipenv sync --dev
-      - run: python -m pipenv run invoke format
+      - run: python -m pipenv run invoke style --check
