--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ sphinx = "*"
 pyyaml = "*"
 invocations = "*"
 sphinx-rtd-theme = "*"
-bumpversion = "*"
+bump2version = "*"
 pipenv-setup = "*"
 isort = "*"
 # Hotfix for Pipenv's Bug @see https://github.com/pypa/pipenv/issues/4101
