--- a/{{cookiecutter.project_slug}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/test.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           python-version: '3.8'
       - run: python -m pip install pipenv
-      - run: python -m pipenv sync --dev
+      - run: python -m pipenv install --skip-lock --dev
       - run: python -m pipenv run invoke style --check
