Add automated test for linting

--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,13 @@ bump2version = "*"
 # Hotfix for Pipenv's Bug @see https://github.com/pypa/pipenv/issues/4101
 colorama = "*"
 cookiecutter = "*"
+flake8 = "*"
 invocations = "*"
 invoke = "*"
 isort = "*"
+mypy = "*"
 pipenv-setup = "*"
+pylint = "*"
 pytest = "*"
 pytest-cookies = "*"
 pytest-resource-path = "*"
