--- a/{{cookiecutter.project_slug}}/Pipfile
+++ b/{{cookiecutter.project_slug}}/Pipfile
@@ -16,6 +16,7 @@ pipenv-setup = "*"
 pylint = "*"
 {% if cookiecutter.use_pytest == 'y' -%}
 pytest = "*"{% endif %}
+radon = "*"
 sphinx = "*"
 tox = "*"
 twine = "*"
@@ -23,3 +24,7 @@ wheel = "*"
 {{cookiecutter.project_slug}} = {path = ".", editable = true}
 
 [packages]
+
+[scripts]
+cc = "radon cc --show-complexity --min B ."
+mi = "radon mi --show ."
