Implement radon command by invoke

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,10 @@ exclude = docs
 # @see https://github.com/psf/black/blob/master/README.md#line-length
 max-line-length = 88
 extend-ignore = E203
+statistics = True
+show_source = True
+
+[radon]
+cc_min = B
+show_complexity = True
+show_mi = True
