--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -16,6 +16,8 @@ exclude = docs
 # @see https://github.com/psf/black/blob/master/README.md#line-length
 max-line-length = {{ cookiecutter.python_code_max_length_per_line }}
 extend-ignore = E203
+statistics = True
+show_source = True
 
 [aliases]
 # Define setup.py command aliases here
