--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,5 +42,15 @@ jobs:
         with:
           python-version: '3.8'
       - run: python -m pip install pipenv
-      - run: python -m pipenv install sync --dev
+      - run: python -m pipenv sync --dev
       - run: python -m pipenv run invoke lint
+  check_complexibility:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+      - run: python -m pip install pipenv
+      - run: python -m pipenv sync --dev
+      - run: python -m pipenv run invoke xenon
