--- a/{{cookiecutter.project_slug}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/test.yml
@@ -42,3 +42,13 @@ jobs:
       - run: python -m pip install pipenv
       - run: python -m pipenv install --skip-lock --dev
       - run: python -m pipenv run invoke lint
+  check_complexibility:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+      - run: python -m pip install pipenv
+      - run: python -m pipenv install --skip-lock --dev
+      - run: python -m pipenv run invoke xenon
