--- a/{{cookiecutter.project_slug}}/.github/workflows/test.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
       - run: python -m pip install pipenv
       - run: python -m pipenv install --skip-lock --dev
       - run: python -m pipenv run invoke lint
-  check_complexibility:
+  check_complexity:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
