Change documentation tool from Sphinx to MkDocs

--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,9 @@ bump2version = "*"
 colorama = "*"
 cookiecutter = "*"
 flake8 = "*"
-invocations = "*"
 invoke = "*"
 isort = "*"
+mkdocs = "*"
 mypy = "*"
 pipenv-setup = "*"
 pylint = "*"
@@ -20,8 +20,6 @@ pytest-cookies = "*"
 pytest-resource-path = "*"
 pyyaml = "*"
 radon = "*"
-sphinx = "*"
-sphinx-rtd-theme = "*"
 tox = "*"
 xenon = "*"
 
