--- a/{{cookiecutter.github_repository_name}}/.bumpversion.cfg
+++ b/{{cookiecutter.github_repository_name}}/.bumpversion.cfg
@@ -3,10 +3,10 @@ current_version = {{ cookiecutter.version }}
 commit = True
 tag = True
 
-[bumpversion:file:pyproject.toml]
-search = version = "{current_version}"
-replace = version = "{new_version}"
+[bumpversion:file:setup.py]
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
