--- a/{{cookiecutter.github_repository_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.github_repository_name}}/.github/workflows/test.yml
@@ -20,9 +20,9 @@ jobs:
         with:
           python-version: {{ "${{ matrix.python-version }}" }}
       - run: python -m pip install pipenv
-      - run: python -m pipenv install {{ "${{ matrix.python-version }}" }} --skip-lock --dev
+      - run: python -m pipenv install --python {{ "${{ matrix.python-version }}" }} --skip-lock --dev
       - run: python -m pipenv run invoke test
-  check_setup:
+  check_style:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
