Remove LICENSE enrty from MANIFEST.in
@see https://packaging.python.org/guides/using-manifest-in/#how-files-are-included-in-an-sdist
> The following files are included in a source distribution by default:
> - all files specified by the license_files option in setup.cfg (setuptools 42.0.0+)

--- a/{{cookiecutter.github_repository_name}}/setup.cfg
+++ b/{{cookiecutter.github_repository_name}}/setup.cfg
@@ -1,3 +1,6 @@
+[metadata]
+license_files = LICENSE
+
 [flake8]
 exclude = docs
 # @see https://github.com/psf/black/blob/master/README.md#line-length
