--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: [ '3.8', '3.7', '3.6', '3.5' ]
+        python-version: [ '3.9', '3.8', '3.7', '3.6', '3.5' ]
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.9'
       - run: python -m pip install pipenv
       - run: python -m pipenv sync --dev
       - run: python -m pipenv run invoke style --check
@@ -40,7 +40,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.9'
       - run: python -m pip install pipenv
       - run: python -m pipenv sync --dev
       - run: python -m pipenv run invoke lint
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.9'
       - run: python -m pip install pipenv
       - run: python -m pipenv sync --dev
       - run: python -m pipenv run invoke xenon
