--- a/{{cookiecutter.github_repository_name}}/.github/workflows/test.yml
+++ b/{{cookiecutter.github_repository_name}}/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: [ '3.8', '3.7', '3.6', '3.5' ]
+        python-version: [ '3.9', '3.8', '3.7', '3.6', '3.5' ]
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.9'
       - run: python -m pip install pipenv
       - run: python -m pipenv install --skip-lock --dev
       - run: python -m pipenv run invoke style --check
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.9'
       - run: python -m pip install pipenv
       - run: python -m pipenv install --skip-lock --dev
       - run: python -m pipenv run invoke lint
@@ -48,7 +48,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.9'
       - run: python -m pip install pipenv
       - run: python -m pipenv install --skip-lock --dev
       - run: python -m pipenv run invoke xenon
